[package]
name = "pblogger-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
byteorder = "1.5.0"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
clap-verbosity-flag = "3.0.3"
env_logger = "0.11.8"
log = "0.4.27"
prost = "0.14.1"
tokio = { version = "1.46.0", features = ["full"] }

[build-dependencies]
prost-build = "0.14.1"

[features]
opentelemetry = []

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"
multiple_crate_versions = "allow" # necessary for prost crates
